<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Welcome to Cubereum"
        android:textAlignment="center"
        android:textColor="#000000"
        android:background="@color/lightblueColor"
        android:fontFamily="@font/convergence"
        android:padding="10dp"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="#F3EDED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textviewae"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"

            android:text="Stay Connected!\nEnter Details to Register"
            android:textAlignment="center"
            android:textColor="#005FFF"
            android:textSize="19sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/firstName_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/first_name"
            android:maxLength="26"
            android:padding="10dp" />

        <EditText
            android:id="@+id/lastName_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/last_name"
            android:maxLength="26"
            android:padding="10dp" />

        <EditText
            android:id="@+id/phone_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/phone_number_10_digits"
            android:inputType="phone"
            android:padding="10dp" />

        <EditText
            android:id="@+id/address_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:maxLength="95"
            android:padding="10dp" />

        <EditText
            android:id="@+id/userNameR_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <EditText
            android:id="@+id/passwordR_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/password_minimum_6_characters"
            android:inputType="textPassword"
            android:maxLength="26"
            android:padding="10dp" />

        <EditText
            android:id="@+id/passwordR_textViewC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLength="26"
            android:padding="10dp" />

        <TextView
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            android:text="@string/register"
            android:background="@drawable/shape2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/gotoLogin_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/already_have_an_account_n_login_now"
            android:textAlignment="center"
            android:background="@drawable/shape2"
            android:textColor="#000000"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>